<resources>
    <string name="app_name">CatHelp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="API_KEY_MAP">AIzaSyA39AVQQXRUmn0tjDU85LkmEKjWX60-MP8</string>
    <string name="add_an_image">add an image</string>
    <string name="add_a_description">add a description</string>
    <string name="how_to_contact_you">how to contact you?</string>
    <string name="add_a_title">add a title</string>
    <string name="add_a_price">add a price</string>
    <string name="address_not_selected">address not selected</string>
    <string name="add_an_address">add an address</string>
    <string name="error">"Error:( "</string>
    <string name="image_save">Image save</string>
    <string name="event_added">Event added</string>
    <string name="title">Title</string>
    <string name="description">Description...</string>
    <string name="open_maps">open maps</string>
    <string name="type_event">Type event:</string>
    <string name="selling">Selling</string>
    <string name="for_free">For free</string>
    <string name="price">Price (₽)</string>
    <string name="save">Save</string>
    <string name="cat">cat</string>
    <string name="dog">dog</string>
    <string name="parrot">parrot</string>
    <string name="fish">fish</string>
    <string name="exotic">exotic</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete">are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add_name">add name</string>
    <string name="add_e_mail">add e-mail</string>
    <string name="add_password">add password</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="registration_failed">Registration failed.</string>
    <string name="successful">Successful!</string>
    <string name="delete_account">Delete account</string>
    <string name="are_you_sure_you_delete_account">Are you sure you delete account?</string>
    <string name="uncorrected_password">Uncorrected password!</string>
    <string name="password_change_successful">Password change successful!</string>
    <string name="saved">Saved</string>
    <string name="no_internet">No internet</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="know_password">I know password</string>
    <string name="log_out">Log out</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="update_password">Update password</string>
    <string name="hi">Hi!</string>
    <string name="my_events">my events</string>
    <string name="settings">settings</string>
    <string name="home">Home</string>
    <string name="maps">Maps</string>
    <string name="favourites">Favourites</string>
    <string name="my_events_top">My events</string>
    <string name="an_event_with_the_same_name_already_exists">An event with the same name already exists</string>
    <string name="you_cant_delete_a_picture">You can not delete a picture if there is only one of it</string>
    <string name="password_must_be_longer_than_8_characters">password must be longer than 8 characters</string>
    <string name="reset_email_send">Reset email send</string>
</resources>