<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">




<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".view.AddNewProductActivity">




    <com.rey.material.widget.ImageView
        android:id="@+id/select_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="75dp"

        android:src="@drawable/default_image"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.rey.material.widget.ImageView>
    <com.rey.material.widget.EditText

        android:background="@drawable/base_input_design"
        android:fontFamily="@font/tahoma"
        android:hint="@string/title"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/select_image"
        android:id="@+id/select_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="22dp"
        android:inputType="textMultiLine">

    </com.rey.material.widget.EditText>
    <com.rey.material.widget.EditText
        android:background="@drawable/base_input_design"
        android:fontFamily="@font/tahoma"
        android:hint="@string/description"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/select_name"
        android:id="@+id/select_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="22dp"
        android:inputType="textMultiLine">

    </com.rey.material.widget.EditText>

    <RadioGroup
        android:layout_marginBottom="50dp"
        android:id="@+id/group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_type"
        tools:layout_editor_absoluteX="16dp">
        <com.rey.material.widget.TextView
            android:id="@+id/textRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tahoma"
            android:padding="10dp"
            android:text="@string/type_event"
            android:textSize="19dp">

        </com.rey.material.widget.TextView>

        <RadioButton
            android:id="@+id/selling_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/tahoma"
            android:padding="10dp"
            android:text="@string/selling"
            android:textSize="18dp">

        </RadioButton>


        <RadioButton
            android:id="@+id/help_radioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/tahoma"
            android:padding="10dp"
            android:text="@string/for_free"
            android:textSize="18dp">

        </RadioButton>
        <com.rey.material.widget.EditText
            android:visibility="gone"
            android:background="@drawable/base_input_design"
            android:fontFamily="@font/tahoma"
            android:hint="@string/price"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:id="@+id/select_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="22dp"
            android:inputType="textMultiLine">

        </com.rey.material.widget.EditText>





    </RadioGroup>
    <com.rey.material.widget.Button

        android:layout_marginTop="10dp"
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/tahoma"
        android:padding="10dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/group_button"
        app:layout_constraintStart_toStartOf="parent"
        >

    </com.rey.material.widget.Button>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/map_add"
        app:layout_constraintTop_toBottomOf="@id/text_adress"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/open_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/lemon"

        app:cornerRadius="15dp"
        android:fontFamily="@font/tahoma"
        android:drawablePadding="100dp"
        android:padding="10dp"
        android:textAllCaps="false"
        app:icon="@drawable/map"
        app:iconTint="@color/black"
        app:iconGravity="textStart"
        android:textColor="@color/black"
        android:textSize="19dp"
        app:layout_constraintStart_toStartOf="parent"
        >

    </com.google.android.material.button.MaterialButton>

    <com.rey.material.widget.TextView
        android:textColor="@color/grey"
        android:layout_marginTop="20dp"
        android:text="@string/address_not_selected"
        android:layout_margin="30dp"
        android:fontFamily="@font/tahoma"
        android:textSize="18dp"
        android:id="@+id/text_adress"
        app:layout_constraintTop_toBottomOf="@id/select_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.rey.material.widget.TextView>
    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/select_connection"
        android:layout_marginHorizontal="30dp"
        android:id="@+id/spinner_type"
        app:smsp_underlineColor="@color/new_pink"
        android:outlineProvider="bounds"
        android:background="@drawable/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatSpinner>
    <com.rey.material.widget.TextView
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:text="@string/how_to_contact_you"
        android:layout_margin="30dp"
        android:fontFamily="@font/tahoma"
        android:textSize="18dp"
        android:id="@+id/text_connetcion"
        app:layout_constraintTop_toBottomOf="@id/map_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.rey.material.widget.TextView>

    <com.rey.material.widget.EditText
        android:background="@drawable/base_input_design"
        android:fontFamily="@font/tahoma"
        android:hint="@string/how_to_contact_you"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_connetcion"
        android:id="@+id/select_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20dp"
        android:inputType="textMultiLine">

    </com.rey.material.widget.EditText>











</androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>
    <com.google.android.material.progressindicator.CircularProgressIndicator

        android:id="@+id/loadingBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"


        app:trackCornerRadius="5dp"

        app:indicatorSize="50dp"
        app:trackThickness="6dp"


        app:trackColor="@color/yellow_ver_white"
        app:indicatorColor="@color/pink_very_white"
        app:indicatorDirectionCircular="clockwise"
        app:indicatorInset="5dp">

    </com.google.android.material.progressindicator.CircularProgressIndicator>
</androidx.constraintlayout.widget.ConstraintLayout>

