<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.fragments.AccountFragment">
    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:theme="@style/MyActionBar"
        android:id="@+id/toolbarSearch"
        app:menu="@menu/base_menu"
        app:title="@string/hi"

        />


    <!-- TODO: Update blank fragment layout -->
    <de.hdodenhof.circleimageview.CircleImageView

        android:id="@+id/imageAccount"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:src="@drawable/cat_breading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

    </de.hdodenhof.circleimageview.CircleImageView>

    <com.rey.material.widget.TextView
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"

        android:fontFamily="@font/futurise"
        android:text="Ваше имя"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:textSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/imageAccount">

    </com.rey.material.widget.TextView>

    <com.rey.material.widget.TextView
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/futurise"
        android:text="Ваше e-mail"
        android:paddingHorizontal="10dp"
        android:paddingVertical="3dp"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/name">

    </com.rey.material.widget.TextView>


    <com.rey.material.widget.LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/phone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/phone"
        android:gravity="center">
        <com.rey.material.widget.Button
            android:layout_marginHorizontal="10dp"
            android:id="@+id/myEventBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_two"
            android:text="@string/my_events"
            android:drawableLeft="@drawable/speak"
            android:textAllCaps="false"
            android:fontFamily="@font/tahoma"
            android:textSize="20dp"
            android:paddingVertical="0dp"
            android:paddingHorizontal="10dp">

        </com.rey.material.widget.Button>
        <com.rey.material.widget.Button

            android:layout_marginHorizontal="10dp"
            android:id="@+id/settingsView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_one"
            android:text="@string/settings"
            android:drawableLeft="@drawable/settings"
            android:textAllCaps="false"
            android:fontFamily="@font/tahoma"
            android:textSize="20dp"
            android:paddingHorizontal="10dp">

        </com.rey.material.widget.Button>

    </com.rey.material.widget.LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>